authorization/authentik-middleware-remote-user-header.yaml
# This definition is necessary, because the default definition from authentik
# does not include the extra header "Remote-User". This header is being mapped
# from the authentik to the user name, but the default middleware is not aware 
# of it. So we create a new MiddleWare to also forward that header

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-auth-remote-user-headers
  namespace: authorization
spec:
  forwardAuth:
    address: http://ak-outpost-authentik-embedded-outpost.authorization:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders: 
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
      - Remote-User
---
