authorization/authentik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth.anagno.dev
  namespace: authorization
  annotations:
    external-dns.kubernetes.io/hostname: auth.anagno.dev
    external-dns.kubernetes.io/target: zh.anagno.dev
    kubernetes.io/ingressClassName: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.anagno.dev`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
      - name: security-headers
        namespace: proxy
  tls:
    secretName: auth-anagno-dev-cert
    options:
      name: tls-security-headers
      namespace: proxy
